# trainur

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: flux.py  ft.py  full.py  llm.py  qwen.py  run.py  sft.py  smol.py  test.py  trainer.py  unsloth.py
trainur/: __init__.py  qwen.py  trainer_utils.py
